add_library(moveit_move_group_interface SHARED src/move_group_interface.cpp)
include(GenerateExportHeader)
generate_export_header(moveit_move_group_interface)
target_include_directories(moveit_move_group_interface PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
set_target_properties(moveit_move_group_interface PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")
target_link_libraries(moveit_move_group_interface moveit_common_planning_interface_objects moveit_planning_scene_interface ${Boost_THREAD_LIBRARY})
ament_target_dependencies(moveit_move_group_interface
  moveit_core
  moveit_msgs
  moveit_ros_move_group
  moveit_ros_occupancy_map_monitor
  moveit_ros_planning
)

install(DIRECTORY include/ DESTINATION include/moveit_ros_planning_interface)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/moveit_move_group_interface_export.h DESTINATION include/moveit_ros_planning_interface)
