add_library(moveit_planning_scene_interface SHARED src/planning_scene_interface.cpp)
set_target_properties(moveit_planning_scene_interface PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")
ament_target_dependencies(moveit_planning_scene_interface moveit_msgs moveit_core moveit_ros_move_group)

install(DIRECTORY include/ DESTINATION include/moveit_ros_planning_interface)
